fix bugs, simplify code, improve readability

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
+/* * is  universal selector, select all */
 *{
+    /*remove all the padding and margin at the start*/
     padding: 0;
     margin: 0;
-    background-origin: padding-box;
+    /* for the mode */
     font-family: 'Poppins', sans-serif;
 }
 
 html{
-    font-size: 18px;
-    background-color: #3d3c3c;
+    font-size: 20px;
+    background-color: #5e5a5a;
 }
 
 .calculator{
-    display: flex; 
-    flex-direction: column;
+    display: flex;
+    /*make content in calculator center*/
     justify-content: center; 
     align-items: center;
 
